# PyNeb_devel

./: .gitignore  404.html  LICENSE.md  MANIFEST  README.md  README.rst  README.txt  doxy_conf_devel.txt  doxy_conf_user.txt  doxygen_config_user.txt  environment.yml  environment_pnml.yml  index.html  make_documentation.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev  requirements.txt  setup.py  sitemap.xml  tips.txt  updatePyNeb.md  updatePyNeb.py
.github/workflows/: ci.yml  test.yml  tests.yml
CHANGES/: 0.9.12-0.9.13.txt  0.9.13-1.0.1.txt  0.9.5-0.9.6.txt  0.9.6-0.9.7.txt  1.1.12-1.1.13.txt  1.1.13-1.1.14.txt  1.1.14-1.1.15.txt  1.1.19-1.1.20.txt  1.1.20-1.1.21.txt  1.1.21-1.1.22.txt  1.1.22-1.1.23.txt  1.1.23-1.1.24.txt  1.1.24-1.1.25.txt  1.1.25-1.1.26.txt  1.1.26-1.1.27.txt  1.1.7-1.1.8.txt  1.1.9-1.1.10.txt
Notebooks/: ChangeAtomicData.ipynb  MonteCarlo_and_ANN.ipynb  PyNeb_manual_1.ipynb  PyNeb_manual_2.ipynb  PyNeb_manual_3.ipynb  PyNeb_manual_4.ipynb  PyNeb_manual_5.ipynb  PyNeb_manual_6.ipynb  PyNeb_manual_7.ipynb  PyNeb_manual_8.ipynb  pyneb_sketch.key
changes/CHANGES/: 0.9.4-0.9.5.txt  1.1.10-1.1.11.txt  1.1.8-1.1.9.txt  LINE_LIST.txt
docs/: README.rst  index.html  index.md
docs/CHANGES/: 0.9.3-0.9.4.txt  1.1.15-1.1.16.txt  1.1.16-1.1.17.txt  1.1.17-1.1.18.txt  1.1.18-1.1.19.txt  1.1.27-1.1.28.txt  1.1.28-1.1.29.txt  1.1.29-1.1.30.txt
docs/Notebooks/: Answer_to_UetaOtsuka_2022.ipynb  Full_Pipeline.ipynb  MonteCarlo.ipynb  MonteCarlo_and_ANN.ipynb  O3S2.ai4neb_sk  PyNeb_manual_1.ipynb  PyNeb_manual_2.ipynb  PyNeb_manual_3.ipynb  PyNeb_manual_4.ipynb  PyNeb_manual_5.ipynb  PyNeb_manual_6.ipynb  PyNeb_manual_7.ipynb  PyNeb_manual_7b.ipynb  PyNeb_manual_8.ipynb  PyNeb_manual_9.ipynb  Some_examples.ipynb  Test_Crit_Density.ipynb  ipynb2pdf  use_HeI_DZS22.ipynb
docs/source/: conf.py  index.rst  modules.rst  pyneb.core.rst  pyneb.extinction.rst  pyneb.plot.rst  pyneb.rst  pyneb.sample_scripts.rst  pyneb.test.rst  pyneb.utils.rst
examples/: README.rst
examples/CHANGES/: 0.9.7-0.9.8.txt  1.0.1-next.txt  1.1.11-1.1.12.txt
examples/Notebooks/: N2_S2.ai4neb_sk  O3_S2.ai4neb_sk  PyNeb_manual_1.ipynb  PyNeb_manual_3.ipynb  (+5 more)
pyneb/: README  README.rst  __init__.py  version.py
tests/: test_1.py  test_Chianti.py
(+611 files in other folders)
