[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyneb"
"version" = "1.1.23b1"
requires-python = ">= 3.8"
dependencies = [
"numpy",
"matplotlib",
"scipy",
# astropy
# hdf5
]
description = "A Python package for nebular analysis"
authors = [
    { name = "Christophe Morisset", email = "chris.morisset@gmail.com" },
    { name = "Valentina Luridiana"}
]
license = { file = "LICENCE.md" }
readme = "README.rst"
keywords = ["nebular", "analysis", "astronomy"]

[project.urls]
Homepage = "http://www.iac.es/proyecto/PyNeb/"
Repository = "https://github.com/Morisset/PyNeb_devel"
Documentation = "http://morisset.github.io/PyNeb_devel/"
Changelog = "https://github.com/Morisset/PyNeb_devel/tree/master/docs/CHANGES"

[project.optional-dependencies]

